- Visualiser toutes les notes de l'année: Possibilité d'afficher les moyennes de bulletins en plus des moyennes de carnets de notes.
- Possibilité d'interdire la création/paramétrage de boites/conteneurs par les professeurs.
- Possibilité, en tant qu'administrateur, de créer des boites/conteneurs par lots dans les carnets de notes d'une sélection d'enseignements.

Cahier de textes:
- Possibilité d'afficher la liste des documents joints à un CDT.
- Possibilité pour les parents et élèves de pointer leurs travaux faits ou non.
- Possibilité de redimensionner les infobulles dans l'affichage semaine.
- Possibilité d'envoyer par mail une portion du cahier de textes.

Absences2:
- Possibilité de modifier les dates/heure de début et fin d'une saisie depuis la page de saisie d'un traitement.
- Accès à l'onglet 'Saisir un groupe' pour les statuts 'autre' avec le droit 'Saisir les absences de tous les élèves'.
- Possibilité de créer des traitements et notifications par lots.

Discipline:
- Affichage par tranches des incidents à traiter (pour limiter le temps de chargement de la page).
- Possibilité d'imprimer des fichiers OOo pour les sanctions  de type travail et autre.
- Possibilité de modifier les termes 'incident' et 'sanction'.
- Possibilité de saisir certaines sanctions en tant que professeur (liste à préciser dans Définir les sanctions).
- Possibilité de restreindre dans Mon compte ce qui a été défini dans Définir les destinataires d'alertes,
  les catégories d'incidents pour lesquelles on souhaite être averti.
- Saisie d'incident: Recherche des élèves et personnels dans le même formulaire.

Modèles Ooo:
- Possibilité de gérer des modèles OOo en compte scolarité ou cpe.

Gestion:
- Ajout de la date d'entrée d'un élève dans l'établissement.
- Possibilité de choisir l'adresse mail destinataire de l'information comme quoi un changement d'adresse mail responsable ou élèev a eu lieu.
- Possibilité d'ajouter un préfixe au sujet des mails envoyés par Gepi.